--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-<h1>this is my new name</h1>
-<h1>this is my mob number</h1>
+<h1>this is my new name codeversion 2</h1>
     
 </body>
 </html>
