--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>this is my new name codeversion 2</h1>
-<h1>this is my phone numbwe</h1>
+<h1>this is my phone code version 2</h1>
     
 </body>
 </html>
